docs/envoy/v1.20.6/_sources/api-v3/extensions/cache/simple_http_cache/v3/config.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/cache/simple_http_cache/v3/config.proto:

SimpleHttpCache CacheFilter storage plugin
==========================================




.. _envoy_v3_api_msg_extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig:

extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig
-----------------------------------------------------------

:repo:`[extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig proto] <api/envoy/extensions/cache/simple_http_cache/v3/config.proto#L14>`



.. _extension_envoy.cache.simple_http_cache:

This extension may be referenced by the qualified name ``envoy.cache.simple_http_cache``

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http.cache <extension_category_envoy.filters.http.cache>`



